👷 Add code ql analysis actions

--- a/.github/workflows/code_ql_analysis.yml
+++ b/.github/workflows/code_ql_analysis.yml
@@ -30,6 +30,7 @@ jobs:
       - name: Build
         run: |
           go get -d -v ./...
+          make init
           make all
           make build
 
