👷 Update CodeQL analysis actions

--- a/.github/workflows/code_ql_analysis.yml
+++ b/.github/workflows/code_ql_analysis.yml
@@ -27,6 +27,9 @@ jobs:
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v1
 
+      - name: Build
+        run: make build
+
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v1
 
