--- a/deploy/docker-compose/ddns-server/docker-compose.yml
+++ b/deploy/docker-compose/ddns-server/docker-compose.yml
@@ -9,8 +9,8 @@ services:
     command: redis-server --port 6380 --requirepass redis-ddns-password
     volumes:
       - ./redis/conf/redis.conf:/usr/local/etc/redis/redis.conf
-      - ./redis/ddns/data:/data
-      - ./redis/ddns/logs:/logs
+      - ./redis/data:/data
+      - ./redis/logs:/logs
     networks:
       net:
         aliases:
@@ -27,7 +27,6 @@ services:
     #      context: .
     #      dockerfile: ./Dockerfile
     depends_on:
-      - redis-session
       - redis-ddns
     restart: always
     environment:
@@ -57,6 +56,7 @@ services:
 
     volumes:
       - ./cert:/cert
+      - ./ads/logs:/logs
     ports:
       - "50001:50001"
       - "50002:50002"
